<resources>
    <string name="app_name">Oreb</string>

    <string name="capo">Capo:</string>
    <string name="tuning">Tuning:</string>
    <string name="magnification">Magnification:</string>

    <string name="guidance_fragment_page_title">Guidance</string>
    <string name="tonic">Tonic:</string>
    <string name="scale">Scale:</string>

    <string name="info_fragment_page_title">Info</string>

    <string name="action_settings">Settings</string>
    <string name="left_control_pane_desc">temporary left control pane</string>

    <!-- Scale Positions -->
    <string name="scale_positions_fragment_page_title">Scale Positions</string>
    <string name="scale_position_system_spinner_label">Scale Position System:</string>
    <string name="scale_position_spinner_label">Scale Position:</string>
    <string name="mark_notes_checkbox_text">Mark notes in the Scale Position</string>
    <string name="dim_unselected_notes_checkbox_text">Dim notes not in the Scale Position</string>
</resources>
