<?xml version="1.0" encoding="utf-8"?>

<!-- TODO: update font size/style of the spinners to match the text label.  Something like: http://tekeye.uk/android/examples/ui/changing-android-spinner-text-size-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <!-- toolbar -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <!-- tonic spinner -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tonic_spinner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tonic"
                android:textIsSelectable="false"
                style="@style/Oreb.SpinnerLabel" />

            <Spinner
                android:id="@+id/tonic_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true" />
        </LinearLayout>

        <!-- scale spinner -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/scale_spinner_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scale"
                android:textIsSelectable="false"
                style="@style/Oreb.SpinnerLabel" />

            <Spinner
                android:id="@+id/scale_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true" />
        </LinearLayout>

    </LinearLayout>

    <!-- selector (note spiral) -->
    <FrameLayout
        android:id="@+id/left_control_pane"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:layout_marginStart="5dp"
        android:layout_marginTop="2.5dp"
        android:layout_marginEnd="2.5dp"
        android:layout_marginBottom="5dp"

        android:layout_weight="1"
        android:contentDescription="@string/left_control_pane_desc"

        android:padding="5dp"
        tools:ignore="InefficientWeight">

        <com.teahousesoftware.oreb.selector.SelectorView
            android:id="@+id/selector_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />
    </FrameLayout>

</LinearLayout>